2002-03-21  Christopher Faylor  <cgf@redhat.com>

	* spawn.cc (find_exec): Return input if file not found.

2002-03-19  Boris Schaeling  <boriss@web.de>

        * poll.cc (poll): Add support for invalid descriptors.

2002-03-15  Robert Collins  <rbtcollins@hotmail.com>

	* fhandler.h (fhandler_termios::lseek): Override lseek.
	* fhandler_termios.cc (fhandler_termios::lseek): Implement this.

2002-03-15  Christopher Faylor  <cgf@redhat.com>

	* cygserver.cc: Include stdlib.h for exit declaration.
	* threaded_queue.cc: Ditto.

2002-03-15  Christopher Faylor  <cgf@redhat.com>

	* pinfo.cc (pinfo::init): Use PID_ALLPIDS flag to control when a
	redirected block should be marked as nonexistent.
	(winpids::add): Use PID_ALLPIDS when looking for all pids.
	* cygwin.h (PID_ALLPIDS): New enum element.

2002-03-15  Corinna Vinschen  <corina@vinschen.de>

	* glob.c (stat32_to_STAT): New function.   
	(g_lstat): Call user space functions always with 32 bit struct stat
	as a workaround.
	(g_stat): Ditto.
	* include/glob.h (struct glob): Don't prototype function pointers
	when compiling Cygwin.

2002-03-14  Christopher Faylor  <cgf@redhat.com>

	* pinfo.cc (pinfo::init): Properly handle execed process stub when
	PID_NOREDIR is specified.

2002-03-13  Boris Schaeling  <boriss@web.de>

	* poll.cc (poll): Remove variable open_fds.  Rearrange and add code to
	fix settings of revents.

2002-03-13  Corinna Vinschen  <corina@vinschen.de>

	* mmap.cc (mmap_record::map_map): Return -1 if VirtualProtect fails.
	(list::erase): New method with no argument.  Erase latest record
	added.
	(mmap64): Fail if map_map() fails.

2002-03-12  Corinna Vinschen  <corina@vinschen.de>

	* sysconf.cc (sysconf): Fix condition.

2002-03-11  Corinna Vinschen  <corina@vinschen.de>

	* mmap.cc (msync): Check area given by addr and len for being a
	contigeous mmap'd region.

2002-03-11  Corinna Vinschen  <corina@vinschen.de>

	* fork.cc (fork_child): Call fixup_mmaps_after_fork() before